Started working on the UI part
Added the html for the structure of the UI and added style.css to enhance the looks of the website.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src=""></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+    <div class="main">
+        <div class="game">
+            <div class="buttons">
+                <div class="button" id="rock"><h2>Rock</h2></div>
+                <div class="button" id="paper"><h2>Paper</h2></div>
+                <div class="button"id="scissors"><h2>Scissors</h2></div>
+            </div>
+            <div class="instruction"><h2>Click on above buttons to play the game</h2></div>
+        </div>
+        <div class="score">
+            <div class="scoreHeader"><h2>Score</h2></div>
+            <div class="humanScore">
+                <div class="name"><h3>Player</h3></div>
+                <div class="scoreCount"><h3>0</h3></div>
+            </div>
+            <div class="computerScore">
+                <div class="name"><h3>Computer</h3></div>
+                <div class="scoreCount"><h3>0</h3></div>
+            </div>
+        </div>
+    </div>
+    <div class="result">
+        <div class="winner"><h1>You Won!</h1></div>
+        <div class="reset"><h2>Reset</h2></div>
+    </div>
+    <footer><h5>Copyright © SPIRUS<h5></footer>
 </body>
 </html>
