Finished the UI Part
Implemented complete code to deal with DOM after click events. Added some css and html to make it look even better.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="./js/script.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -34,7 +34,8 @@
         </div>
     </div>
     <div class="result">
-        <div class="winner"><h1>You Won!</h1></div>
+        <div class="round"></div>
+        <div class="winner"><h1>Let's Play</h1></div>
         <div class="reset"><h2>Reset</h2></div>
     </div>
     <footer><h5>Copyright © SPIRUS<h5></footer>
